--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>BTS SN - Informatique et Réseaux</h1>
+<h2>Lycée Astier, Aubenas - Ardèche, France<h2>
+<p>Bienvenue sur notre espace Github.</p>
 </body>
 </html>
